--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
             <version>19</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.1</version>
+        </dependency>
+
+
 
     </dependencies>
 
