--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
             <version>9.0.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.5.2.Final</version>
+        </dependency>
+
 
 
     </dependencies>
